apps/bookinfo/app/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
  namespace: bookinfo
spec:
  hosts:
    - productpage.bookinfo.svc.cluster.local
  http:
    - route:
        - destination:
            host: productpage.bookinfo.svc.cluster.local
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: bookinfo
spec:
  hosts:
    - ratings.bookinfo.svc.cluster.local
  http:
    - route:
        - destination:
            host: ratings.bookinfo.svc.cluster.local
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
  namespace: bookinfo
spec:
  hosts:
    - details.bookinfo.svc.cluster.local
  http:
    - route:
        - destination:
            host: details.bookinfo.svc.cluster.local
            subset: v1
---
